# RUST-DEMO

./: LICENSE  README.md
Demo/: Cargo.toml
Demo/assets/: grid.glb
Demo/assets/blackhole/: fragment.glsl  fragment2.glsl  vertex.glsl
Demo/assets/model/: 1911.glb  anim.glb  casa.glb  fragment.glsl  gun.glb  gun2.glb  harta1.glb  heli.glb  helicopter.glb  map.glb  map2.glb  map3.glb  monkey.glb  vertex.glsl
Demo/assets/model/shaders/: frag.glsl  fragment.glsl  vert.glsl  vertex.glsl
Demo/src/: main.rs
Demo/src/seb/: collision.rs  gltfmodel.rs  mod.rs  model.rs  planet.rs  player.rs  primitives.rs  seb.rs  skybox.rs  test.rs  ui.rs  window.rs
Demo/src/seb/gui/: gui.rs  mod.rs  panel.rs  text.rs  window.rs
