[package]
name = "app"
version = "0.1.0"
edition = "2024"
authors = ["Covita Sebastian Marian"]

[dependencies]
glfw = "0.60.0"
gl = "*"
nalgebra-glm = "0.20.0"
nalgebra = "0.34.0"
stb_image = "*"
gltf = "*"
rusttype = "*"

[features]
demo1 = []
demo2 = []
demo3 = []
demo4 = []
demo5 = []
demo6 = []